src/tests/testfiles/variable-declarations/8.txt
testfiles/variable-declarations/8.c:2:9: error: incompatible types when initializing type 'int' using type 'char []'
int j = "hello";
    ^
testfiles/variable-declarations/8.c:4:9: error: incompatible types when initializing type 'int' using type 'char'
int jj = {'h', 'e', 'l', 'l'};
    ^
